# adventer

./: .gitignore  pyproject.toml  readme.md
src/adventer/: __init__.py  day02.py  day03.py  day04.py  parser.py
src/adventer/day01/: __init__.py
