# --------------------------------------------------------------------------------------------------
# SPDX-License-Identifier: Apache-2.0
# Copyright (C) 2024 Jayesh Badwaik <jayesh@ambhora.com>
# --------------------------------------------------------------------------------------------------
[project]
name = "adventer"
dynamic = ["version"]
description = 'Advent of Code'
readme = "readme.md"
license = "Apache-2.0"
authors = [
{ name = "Jayesh Badwaik", email = "badwaik.jayesh@gmail.com" },
]
dependencies = [
  "semver",
  "pandas"
]

[project.urls]
Source = "https://github.com/jbadwaik/adventer"

[project.scripts]
adventer = "adventer:main"
d01p01 = "adventer.day01:p01"
d01p02 = "adventer.day01:p02"
d02p01 = "adventer.day02:p01"
d02p02 = "adventer.day02:p02"

# --------------------------------------------------------------------------------------------------
# Hatch configuration
# --------------------------------------------------------------------------------------------------
[tool.hatch.version]
path = "src/adventer/metadata.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adventer"]

[tool.hatch.build.targets.wheel.shared-data]
"share"="share"

# --------------------------------------------------------------------------------------------------
# PyTest configuration
# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov --cov-report term-missing --cov-fail-under=80"

[tool.black]
line-length = 100

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov"
]

[tool.hatch.envs.mypy]
dependencies = [
  "types-PyYAML",
  "mypy",
  "semver",
  "pytest"
]
